# Q4-Hackathon_2

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env  todo_api.db
frontend/src/lib/: api.ts
history/prompts/001-console-todo-app/: 0001-create-todo-app-spec.spec.prompt.md  0002-create-implementation-plan.plan.prompt.md  0003-create-implementation-tasks.tasks.prompt.md
history/prompts/constitution/: 0001-update-todo-app-constitution.constitution.prompt.md
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo-app/checklists/: plan-quality.md  requirements.md
src/cli/: main.py
src/models/: todo_item.py
src/services/: todo_service.py
tests/integration/: test_cli_flow.py
